fix: adjust alignment on header

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,39 +2,55 @@ header{
     display: flex;
     flex: 100%;
     flex-wrap: nowrap;
-    margin-left:130px;
+    margin:0 0 30px 130px;
+    
     .header-logo{
         height:57px;
-        width:auto;
-        max-width: 100%;
-        margin: 20px 15px 0 0;
+        width: 50px;
+        // width:auto;
+        // max-width: 100%;
+        // margin: 20px 15px 0 0;
     }
     .header-logo-letter{
-        height:15px;
-        width:auto;
-        max-width: 100%;
-        margin: 42px 0 0 0;
+        height: 15px;
+        margin: 0 0 20px 5px;
+        // width: 100%;
+        // width:auto;
+        // max-width: 100%;
+        // margin: 42px 0 0 0;
     }
-    .header-nav{
-        flex: 50%;
-        margin-left: 700px;
-        ul a{
-            list-style-type: none;
+}
+
+.header-nav{
+    // flex: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // margin-left: 700px;
+
+    // li{
+    //     display: inline;
+    // }
+    
+    .book-info-session{
+        font-family: 'Century Gothic';
+        font-size: 1em;
+        text-transform: uppercase;
+        @include book-btn; 
+    }
+}
+
+.menu-header-nav-container{
+    ul{
+        display: flex;
+        width: 500px;
+        justify-content: space-between;
+        a{
             text-decoration: none;
             text-transform: capitalize;
-            font-family: 'Century Gothic';
-            font-size:18PX;
-        }
-        li{
-            display: inline;
-            padding-right: 25px;
-        }
-        .book-info-session{
-            font-family: 'Century Gothic';
-            font-size: 16px;
-            text-transform: uppercase;
-            @include book-btn; 
-        }
+            font-family: 'Century Gothic Bold';
+            font-size: 1em;
+            color: $nav-color;
+            }
     }
-    
 }
